fix(info): add align-self to support nesting inside flex containers

--- a/src/packages/core/src/info/info.css
+++ b/src/packages/core/src/info/info.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: row;
   align-items: flex-start;
+  align-self: flex-start;
   width: 100%;
   border-radius: var(--S4);
 }
